@@ -2,9 +2,10 @@ package ru.job4j.sort;
 
 import org.junit.Test;
 
-import java.util.Arrays;
+
 import java.util.List;
 import java.util.Set;
+
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -18,9 +19,13 @@ public class SortUserTest {
     @Test
     public void whenListThenSortedSet() {
         SortUser user = new SortUser();
-        User[] us = {new User("Denis", 35),
-                new User("Pavel", 32)};
-        List<User> list = Arrays.asList(us);
+//        User[] us = {new User("Denis", 35),
+//                new User("Pavel", 32)};
+//        List<User> list = Arrays.asList(us);
+//        Set<User> result = user.sort(list);
+        List<User> list = List.of(
+                new User("Denis", 35),
+                new User("Pavel", 32));
         Set<User> result = user.sort(list);
         assertThat(result.iterator().next().getName(), is("Pavel"));
 
@@ -29,9 +34,12 @@ public class SortUserTest {
     @Test
     public void whenListThenSortedListByNameLength() {
         SortUser user = new SortUser();
-        User[] us = {new User("Denis", 35),
-                new User("PavelIvanov", 32)};
-        List<User> list = Arrays.asList(us);
+//        User[] us = {new User("Denis", 35),
+//                new User("PavelIvanov", 32)};
+//        List<User> list = Arrays.asList(us);
+        List<User> list = List.of(
+                new User("Denis", 35),
+                new User("PavelIvanov", 32));
         List<User> result = user.sortNameLength(list);
         assertThat(result.iterator().next().getName(), is("PavelIvanov"));
     }
@@ -39,9 +47,13 @@ public class SortUserTest {
     @Test
     public void whenListThenSortedListByNameOrByAge() {
         SortUser user = new SortUser();
-        User[] us = {new User("Denis", 35),
-                new User("Denis", 32)};
-        List<User> list = Arrays.asList(us);
+//        User[] us = {new User("Denis", 35),
+//                new User("Denis", 32)};
+//        List<User> list = Arrays.asList(us);
+        List<User> list = List.of(
+                new User("Denis", 35),
+                new User("Denis", 32)
+        );
         List<User> result = user.sortByAllFields(list);
         assertThat(result.iterator().next().getAge(), is(32));
     }
